# handon

Pyframex/: README.md  cli.py  main.py  pyproject.toml
Pyframex/plugin/: HelloPlugin.py  Logging_middleware.py  middleware_plugin.py
Pyframex/pyframex/: app.py  asgi.py  config.py  container.py  context.py  exception.py  hooks.py  logger.py  middleware.py  middleware_manager.py  plugin_loader.py  plugins.py  response.py  router.py  utils.py
Pyframex/tests/: test_app.py
autocompletion/: engine.py  main.py  parser.py  trail.ipynb  trie.py  words.txt
bittorrent/: main.py
bittorrent/torrent/: bencode.py  parser.py
bittorrent/tracker/: client.py
db/: btree.py  cursor.py  database.db  dummy.ipynb  pager.py  repl.py  row.py  serializer.py  table.py  test_page.db
gb_emulator/: cpu.py  main.py  memory.py  rom.py
gb_emulator/roms/: tetris.gb
http-server/: server.py
http-server/handlers/: router.py
http-server/http/: request.py  response.py
http-server/static/: index.html  style.css
mini-ffmeg/: a.out  frame_000.ppm  frame_001.ppm  frame_002.ppm  frame_003.ppm  frame_004.ppm
mini-ffmeg/src/: main.c
mini-kafka/broker/: server.py
mini-kafka/client/: consumer.py  producer.py
os/my-os/: build.sh  linker.ld
os/my-os/boot/: boot.asm  gdt.asm
os/my-os/kernel/: kernel.c
server-project/: server.py
tes_frame/: main.py
tes_frame/frame/: app.py
